# fastapi-CI-CD-example

./: .pdm-python  Dockerfile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
src/: main.py
