[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kanishk Pachauri", email = "itskanishkp.py@gmail.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0.post1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn src.main:app --host 0.0.0.0"
